# CreditScoringAPI

./: Procfile  README.md  pyproject.toml  requirements.txt
.github/workflows/: build_and_test.yml  python-app.yml  tests.yml
api_deployment/: aux_func.py
fastAPI/: backend_fastapi.py  test.py
mlflow/: mlflow_api.py  model_test.py
streamlit/: dashboard.py  input_information.csv
tests/: test_client_validation.py  test_initialization.py  test_integration_database.py
