[tool.poetry]
name = "api-deployment"
version = "0.1.0"
description = ""
authors = ["Nicolas CUERVO <nicolas.cuervo.r@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
mlflow = "^2.16.2"
virtualenv = "^20.26.6"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
