[tool.poetry]
name = "api-deployment"
version = "0.1.0"
description = ""
authors = ["Nicolas CUERVO <nicolas.cuervo.r@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
mlflow = "2.17.0"
virtualenv = "^20.26.6"
uvicorn = "^0.32.0"
fastapi = "^0.115.2"
pydantic = "^2.9.2"
projet07 = {git = "https://github.com/nicolascuervo/CreditScoring.git"}
psutil = "6.0.0"
numpy = "2.0.0"
imblearn = "^0.0"
shap = "^0.46.0"
python-dotenv = "^1.0.1"
gdown = "^5.2.0"
tdqm = "^0.0.1"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
